--- a/vj4/ui/templates/partials/login_dialog.html
+++ b/vj4/ui/templates/partials/login_dialog.html
@@ -1,12 +1,12 @@
 <div class="dialog dialog--signin" style="display:none">
   <div class="dialog__content">
-    <div class="dialog--signin__bg">
-      <div class="dialog--signin__side">
+    <!--div class="dialog-signin__bg">
+      <div class="dialog-signin__side">
         <h1>{{ _('Don\'t have an account?') }}</h1>
         <p>{{ _('By signing up a Vijos universal account, you can submit code and join discussions in all online judging services provided by us.') }}</p>
         <div><a href="{{ reverse_url('user_register') }}" class="inverse rounded button">{{ _('Sign Up Now') }}</a></div>
       </div>
-    </div>
+    </div-->
     <div class="dialog--signin__main">
       <form action="{{ reverse_url('user_login') }}" method="post">
         <div class="dialog--signin__close-container supplementary">
