--- a/vj4/ui/templates/about.html
+++ b/vj4/ui/templates/about.html
@@ -15,16 +15,8 @@
         <h1 class="section__title" id="contact" data-heading>{{ _('Contact Us') }}</h1>
       </div>
       <div class="section__body typo">
-        <h3>{{ _('Discussion') }}:</h3>
-        <blockquote>{{ _('QQ Group') }}: 248452688</blockquote>
-        <h3>{{ _('Manager') }}:</h3>
-        <blockquote>{{ _('QQ') }}: 514649176<br>{{ _('Email') }}: mrw # vijos.org</blockquote>
-        <h3>{{ _('Development') }}:</h3>
-        <blockquote>{{ _('QQ') }}: 490241327<br>{{ _('Email') }}: dev $ vijos.org</blockquote>
-        <h3>{{ _('Ops') }}:</h3>
-        <blockquote>{{ _('QQ') }}: 459834574<br>{{ _('Email') }}: ops [at] vijos.org</blockquote>
-        <h3>{{ _('Feedback') }}:</h3>
-        <blockquote>{{ _('QQ') }}: 1744540592<br>{{ _('Email') }}: feedback &amp;#64; vijos.org</blockquote>
+        <h3>{{ _('Manager') }} {{ _('Ops') }}:</h3>
+        <a href="https://oj.sustc.space/user/-1">xieyi</a>&nbsp;<a href="https://oj.sustc.space/user/-3">edwardfang</a>
       </div>
     </div>
     <div class="section" data-heading-extract-to="#menu-item-about">
