--- a/vj4/ui/pages/contest_scoreboard.page.styl
+++ b/vj4/ui/pages/contest_scoreboard.page.styl
@@ -14,6 +14,10 @@
     border-left: 1px solid $table-border-color
     text-align: center
 
+  .col--problem_submit
+    border-left: 1px solid $table-border-color
+    text-align: center
+
   +mobile()
     .col--user
       width: auto
