--- a/vj4/ui/templates/record_main.html
+++ b/vj4/ui/templates/record_main.html
@@ -79,7 +79,7 @@
           {% endfor %}
           </tbody>
         </table>
-        {% if handler.has_priv(vj4.model.builtin.PRIV_VIEW_JUDGE_STATISTICS) %}
+        {% if handler.has_perm(vj4.model.builtin.PERM_REJUDGE) %}
         <ul class="pager">
           <li>
             <a class="pager__item next link" href="?start={{ rdocs[-1]['_id'] }}&{{ query_string }}">{{ _('pager_next') }}</a>
